# journal-agent

./: README.md  pyproject.toml
journal_agent/: __init__.py  agent.py  cli.py  storage.py
